# gp-backend

./: .gitignore  home.html  main.py  pyproject.toml  readme.md  user.py
core/card/: __init__.py  names.txt
core/common/: __init__.py  auth.py  sql.py
core/info/: __init__.py  common.py  favorite.py  homes.py  news.py  proxy.py
core/news/: __init__.py
core/user/: __init__.py  impl.py  relation.py  wechat.py
core/userdata/: activity.py  favorite.py  reminder.py
static/: home.html  swagger-ui-bundle.js
user/: impl.py
