[tool.poetry]
name = "gp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
sqlmodel = "^0.0.8"
redis = "^4.4.2"
pyjwt = "^2.6.0"
pymysql = "^1.0.2"
cachetools = "^5.3.0"
ujson = "^5.7.0"
httpx = { extras = ["http2"], version = "^0.23.3" }
brotli-asgi = "^1.3.0"
python-multipart = "^0.0.5"
email-validator = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"