[tool.poetry]
name = "gp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "readme.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
sqlmodel = "^0.0.14"
redis = "^5.0.1"
pyjwt = "^2.8.0"
pymysql = "^1.1.0"
cachetools = "^5.3.2"
ujson = "^5.8.0"
httpx = { extras = ["http2"], version = "^0.25.2" }
brotli-asgi = "^1.4.0"
python-multipart = "^0.0.6"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
orjson = "^3.9.10"
email-validator = "^2.1.0.post1"
pydantic = "1.10.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
